# app_blocks_api

./: Cargo.toml  Dockerfile  Makefile
src/: main.rs
src/application/services/: base_service.rs  mod.rs  user_component_service.rs  version_management_service.rs
src/config/: database.rs  inject_config.rs  mod.rs  settings.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs  user_component.rs  version_management.rs
src/domain/model/: mod.rs  user_component_model.rs  version_management_model.rs
src/domain/repositories/: base_repository.rs  mod.rs  user_component_repository.rs  version_management_repository.rs
src/entities/: version_management.rs
src/infrastructure/persistence/: base_repository_impl.rs  mod.rs  user_component_repository_impl.rs  version_management_repository_impl.rs
src/interfaces/controller/: file_controller.rs  home_controller.rs  mod.rs  user_component_controller.rs
src/migrations/: m20240101_000001_create_user_components_table.rs  m20240101_000002_create_version_management_table.rs  mod.rs
src/util/: time.rs
