[package]
name = "app_blocks_api"
version = "1.0.0"
edition = "2021"

[dependencies]
more-di = { version = "3.1.0", features = ["builder", "inject", "async"]}
serde_json = "1.0.113"
lazy_static = "1.4.0"
dotenv = "0.15.0"
time = { version = "0.3", features = ["macros","local-offset", "formatting", "parsing"] }
actix-web = "4.9.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1.83"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print" ] }
tokio = { version = "1", features = ["full"] }
redis = "0.25.4"
futures = "0.3"
actix-multipart = "*"
actix-files="*"
sea-orm-migration = "*"
chrono = "*"
struct-convert = "1.3.1"
